--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-40f7d26f-afd1-46ca-8150-457bf942c37f" data-elfsight-app-lazy></div>
+hello
