--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
+<script type="text/javascript" src="/metrika.js"></script>
+
+<noscript><div><img src="https://mc.yandex.ru/watch/34775260" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
 <div class="elfsight-app-40f7d26f-afd1-46ca-8150-457bf942c37f" data-elfsight-app-lazy></div>
