--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/5" data-width="100%" data-userpic="true" data-color="343638" data-dark-color="FFFFFF"></script></div>
+<div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/6" data-width="100%" data-userpic="false" data-color="343638" data-dark-color="FFFFFF"></script></div>
