--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
  </head>
 
 <div>
+
+<iframe src="https://tumblrwidget.com/#/embed/maxkolosov/false/false/false/ffffff/ffffff/" width="1000" height="1000"></iframe> 
+ 
+ 
+ 
 <br>  
 <div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/5" data-width="100%" data-userpic="false" data-color="343638" data-dark-color="FFFFFF"></script></div>
 <br>
