--- a/index.html
+++ b/index.html
@@ -19,14 +19,70 @@
 
  </head>
 
-<div>
+<body>
 
-<iframe src="https://tumblrwidget.com/#/embed/maxkolosov/false/false/false/ffffff/ffffff/" width="1000" height="1000"></iframe> 
- 
- 
- 
+<script type="text/javascript" id="tumTableScript">
+
+
+
+(function() {
+	var postCount = 6;
+	var titleHasURL = false;
+	
+	// Tumblr retrieval
+	var tumJSON = document.createElement('script');
+	tumJSON.type = 'text/javascript';
+	tumJSON.src = 'http://maxkolosov.tumblr.com/api/read/json?type=text&filter=text&num=' + postCount;
+	document.head.appendChild(tumJSON);
+
+	// Styles
+	var css = '.tumTable { font-family: sans-serif; border-collapse: collapse; border-spacing: 0; border: 2px solid #808080; text-align: left; } \
+    .tumTable th { background-color:#FFCC00; border-bottom: 2px solid #808080; text-align: left; font-size: 15px; } \
+    .tumTable th, td { padding: 3px; } \
+    .tumTitle { border-top: 1px solid #808080; padding-top: 16px; font-weight: bold; font-size: 13px; } \
+    .tumText { padding-bottom: 16px; color: #333333; font-size: 12px;}';
+	var style = document.createElement('style');
+	document.head.appendChild(style);
+	style.type = 'text/css';
+	style.appendChild(document.createTextNode(css));
+	
+	// Execute and generate table
+	tumJSON.onload = function(data) {
+	    if(!tumblr_api_read) return;
+	    var posts = tumblr_api_read.posts;
+	    var tbody = '<tbody>';
+	    for(var i = 0; i < postCount; ++i) {
+	        post = posts[i];
+	        title = post['regular-title'];
+	        url = post['url'];
+	        if (titleHasURL){ 
+		        title = '<a href="' + url + '" target="_blank">' + title + '</a>';
+		    }
+	        text = post['regular-body'];
+	        tbody += '<tr><td class="tumTitle">' + title + '</td></tr>';
+	        tbody += '<tr><td class="tumText">' + text + '</td></tr>';
+	    }
+		tbody += '</tbody>';
+		
+		//Insert result
+		var messagesAnnoucements = document.getElementById("messagesAnnoucements");
+		var table = '<table class="tumTable"><thead><tr><th>';
+		table += 'Messages & Announcements';
+		table += '</th></tr></thead>';
+		table += tbody;
+		table += '</table>';
+	    messagesAnnoucements.innerHTML =  table;
+	};
+})();
+</script>
+
+<div style="overflow: scroll;" id="messagesAnnoucements"><p>Please <a href="http://maxkolosov.tumblr.com/">follow this link</a> to view recent news.</p></div>
+
+
 <br>  
 <div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/5" data-width="100%" data-userpic="false" data-color="343638" data-dark-color="FFFFFF"></script></div>
 <br>
 <div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/6" data-width="100%" data-userpic="false" data-color="343638" data-dark-color="FFFFFF"></script></div>
-</div>
+
+ 
+</body>
