--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
- <head>
+<!doctype html>
+<html>
+<head>
 
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width">
+<title>МАКС КОЛОСОВ</title>
+	
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();
@@ -17,7 +24,7 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/34775260" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 
- </head>
+</head>
 
 <body>
 
@@ -26,7 +33,7 @@
 
 
 (function() {
-	var postCount = 6;
+	var postCount = 3;
 	var titleHasURL = false;
 	
 	// Tumblr retrieval
@@ -86,3 +93,4 @@
 
  
 </body>
+</html>
