--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+<script type="text/javascript" src="http://{username}.tumblr.com/js"></script>
 <br>  
 <div><script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-post="maxkolosov_ru/5" data-width="100%" data-userpic="false" data-color="343638" data-dark-color="FFFFFF"></script></div>
 <br>
